feat: area do locatario e integração com Stripe
